@@ -108,7 +108,7 @@ fi
 ## Deal with old format
 nbfields=$(head -1 $VALIDPAIRS | awk '{print NF}')
 
-if [[ $nbfields == "12" ]]; then
+if [[ $nbfields == "12" || $nbfields == "13" ]]; then
     echo -e "HiC-Pro format > 2.7.5 detected ..."
 
 elif [[ $nbfields == "8" ]]; then
@@ -134,9 +134,11 @@ if [[ ! -z $RESFRAG ]]; then
 
     ## The “pre” command needs the contact map to be sorted by chromosome and grouped so that all reads for one chromosome (let’s say, chr1) appear in the same column.
     ## Also, chromosomes should not have the ‘chr” substring and the strand is coded as 0 for positive and anything else for negative (in practice, 1).
-    awk '{$4=$4!="+"; $7=$7!="+"; n1=split($9, frag1, "_"); n2=split($10, frag2, "_"); } $2<=$5{print $1, $4, $2, $3, frag1[n1], $7, $5, $6, frag2[n2], $11, $12 }$5<$2{ print $1, $7, $5, $6, frag2[n2], $4, $2, $3, frag1[n1], $12, $11}' $VALIDPAIRS | sort -T ${TEMP} -k3,3d -k7,7d -S 90% > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
+    awk '{$4=$4!="+"; $7=$7!="+"; n1=split($9, frag1, "_"); n2=split($10, frag2, "_"); } $2<=$5{print $1, $4, $2, $3, frag1[n1], $7, $5, $6, frag2[n2], $11, $12 }$5<$2{ print $1, $7, $5, $6, frag2[n2], $4, $2, $3, frag1[n1], $12, $11}' $VALIDPAIRS | LANG=C sort -T ${TEMP} -k3,3d -k7,7d -S 50% --parallel=4 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
+
 else
-    awk '{$4=$4!="+"; $7=$7!="+"} $2<=$5{print $1, $4, $2, $3, 0, $7, $5, $6, 1, $11, $12 }$5<$2{ print $1, $7, $5, $6, 0, $4, $2, $3, 1, $12, $11 }' $VALIDPAIRS | sort -T ${TEMP} -k3,3d  -k7,7d -S 90% > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
+    awk '{$4=$4!="+"; $7=$7!="+"} $2<=$5{print $1, $4, $2, $3, 0, $7, $5, $6, 1, $11, $12 }$5<$2{ print $1, $7, $5, $6, 0, $4, $2, $3, 1, $12, $11 }' $VALIDPAIRS | sort -T ${TEMP} -k3,3d  -k7,7d -S 50% --parallel=4 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
+
 fi
 
 echo -e "Running Juicebox ..."
@@ -145,9 +147,9 @@ OUTPUTFILE=${OUT}/$(basename $VALIDPAIRS).hic
 ## This is the command to generate the hic file that can be visualized with Juicebox with restriction fragment information
 
 if [[ ! -z $RESFRAG ]]; then
-    java -jar ${JUICERJAR} pre -f ${TEMP}/$$_resfrag.juicebox ${TEMP}/$$_allValidPairs.pre_juicebox_sorted ${OUTPUTFILE} ${GSIZE}
+    java -Xmx32g -jar ${JUICERJAR} pre -f ${TEMP}/$$_resfrag.juicebox ${TEMP}/$$_allValidPairs.pre_juicebox_sorted ${OUTPUTFILE} ${GSIZE}
 else
-    java -jar ${JUICERJAR} pre ${TEMP}/$$_allValidPairs.pre_juicebox_sorted ${OUTPUTFILE} ${GSIZE}
+    java -Xmx32g -jar ${JUICERJAR} pre ${TEMP}/$$_allValidPairs.pre_juicebox_sorted ${OUTPUTFILE} ${GSIZE}
 fi
 
 ## Clean
